--- a/src/notification/docker-compose.yaml
+++ b/src/notification/docker-compose.yaml
@@ -8,10 +8,13 @@ services:
       - "RABBITMQ_DEFAULT_PASS=Lumi-123"
       - "RABBITMQ_DEFAULT_USER=luminosityleds"
     ports:
-      - 15672:15672
-      - 5672:5672
+      - "15672:15672"
+      - "5672:5672"
     networks:
       - rabbitmq_go_net
+    volumes:
+      - ./rabbitmq-data:/var/lib/rabbitmq
+
 
 networks:
   rabbitmq_go_net:
