--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9",
     "amqplib": "^0.10.3",
     "axios": "^1.2.6",
     "cors": "^2.8.5",
@@ -28,6 +27,7 @@
     "typescript": "^4.9.3"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.10.3"
+    "@types/amqplib": "^0.10.3",
+    "@types/node": "^20.8.9"
   }
 }
