--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "amqplib": "^0.10.3",
+    "dotenv": "^16.3.1",
     "typescript-coverage-report": "^0.7.0"
   },
   "scripts": {
