--- a/src/notification/docker-compose.yaml
+++ b/src/notification/docker-compose.yaml
@@ -4,9 +4,7 @@ services:
     image: rabbitmq:3.9.13-management-alpine
     container_name: 'rabbitmq'
     restart: always
-    environment:
-      - "RABBITMQ_DEFAULT_PASS=Lumi-123"
-      - "RABBITMQ_DEFAULT_USER=luminosityleds"
+    env_file: ".env"
     ports:
       - "15672:15672"
       - "5672:5672"
@@ -14,7 +12,6 @@ services:
       - rabbitmq_go_net
     volumes:
       - ./rabbitmq-data:/var/lib/rabbitmq
-
 
 networks:
   rabbitmq_go_net:
