added test script, jest and babel dependencies

--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "typescript-coverage-report": "^0.7.0"
   },
   "scripts": {
-    "ts-coverage": "typescript-coverage-report"
+    "ts-coverage": "typescript-coverage-report",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
+    "jest": "^29.7.0"
   }
 }
