--- a/.github/workflows/run_backend_tests.yml
+++ b/.github/workflows/run_backend_tests.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   # Run tests
-  test_login:
+  backend_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
