add 'npx ts-node' to pub/sub notify services
Signed-off-by: pogi7 <aaronlevitt7@gmail.com>

--- a/src/notification/publish/Dockerfile
+++ b/src/notification/publish/Dockerfile
@@ -1,12 +1,20 @@
-FROM node:14
+# Base image for publish notification microservice.  This image uses amd64 as the architecture 
+FROM amd64/node:18-bullseye
 
+# Specifies app directory as working directory in docker image
 WORKDIR /app
 
+# Exposes port 4000 which is the same port specified in the express app in publish.ts
+EXPOSE 4000
+
+# Copy config files to app directory in docker image
 COPY package.json /app/
-RUN npm install
 
-COPY . /app
+# Install all dependencies to run publish notification microservice in silent mode
+RUN npm install --silent
 
-EXPOSE 3000
+# Copy all other files to app directory in docker image
+COPY . ./
 
-CMD ["ts-node", "index.ts"]
+# run the command specified in the package.json to start the publish notification microservice
+CMD ["npm", "run", "publish"]
