--- a/src/notification/publish/package.json
+++ b/src/notification/publish/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "publish.ts",
   "scripts": {
-    "test": "jest",
+    "test": "jest publish.test.ts",
     "publish": "npx ts-node publish.ts"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
