--- a/src/notification/publish/package.json
+++ b/src/notification/publish/package.json
@@ -7,6 +7,11 @@
     "test": "jest publish.test.ts",
     "publish": "npx ts-node publish.ts"
   },
+  "jest": {
+    "transform": {
+        "^.+\\.(ts|tsx)$": "ts-jest"
+    }
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,8 +23,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
