Changed some code for publish jest test (currently times out)

--- a/src/notification/publish/package.json
+++ b/src/notification/publish/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "publish.ts",
   "scripts": {
-    "test": "jest publish.test.ts",
+    "test": "jest publish.test.ts --watchAll --no-cache --runInBand --detectOpenHandles --forceExit",
     "publish": "npx ts-node publish.ts"
   },
   "jest": {
+
     "transform": {
         "^.+\\.(ts|tsx)$": "ts-jest"
     }
