--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "tests"
   },
   "scripts": {
+    "test": "jest test",
     "ts-coverage": "typescript-coverage-report"
   },
   "author": "",
