--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.7.0",
-    "react-scripts": "^5.0.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "mongoose": "^8.1.0",
+    "react-scripts": "^5.0.1",
     "typescript-coverage-report": "^0.7.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.10.0"
   }
