--- a/src/notification/subscribe/package.json
+++ b/src/notification/subscribe/package.json
@@ -5,17 +5,21 @@
   "main": "subscribe.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "subscribe": "npx ts-node subscribe.ts"
+    "subscribe": "npx ts-node subscribe.ts",
+    "subscribeRoutes": "npx ts-node subscribeRoutes.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mqtt": "^5.3.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/uuid": "^9.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
