--- a/src/notification/publish/package.json
+++ b/src/notification/publish/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.1.1",
     "mqtt": "^5.3.0",
     "uuid": "^9.0.1"
   },
@@ -26,6 +27,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/mongoose": "^5.11.97",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
     "jest": "^29.7.0",
