--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.7.0",
-    "react-scripts": "^5.0.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "mongoose": "^8.2.0",
+    "react-scripts": "^5.0.1",
     "typescript-coverage-report": "^0.7.0"
   },
   "devDependencies": {
