--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mqtt": "^2.5.0",
+    "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
