--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,8 @@ services:
     build:
       context: 'src/notification/publish'
     env_file: ".env"
+    volumes:
+      - ./src/notification/publish:/app
     ports:
       - 4000:4000
     networks:
@@ -49,6 +51,8 @@ services:
     build:
       context: 'src/notification/subscribe'
     env_file: ".env"
+    volumes:
+      - ./src/notification/subscribe:/app
     networks:
       - backend
     depends_on:
