--- a/src/notification/subscribe/Dockerfile
+++ b/src/notification/subscribe/Dockerfile
@@ -4,6 +4,9 @@ FROM node:18-bullseye
 # Specifies app directory as working directory in docker image
 WORKDIR /app
 
+# Exposes port 7000 which is the same port specified in the express app in subscribe.ts
+EXPOSE 7000
+
 # Copy config files to app directory in docker image
 COPY package.json /app/
 
