add google file to dockerfile
Signed-off-by: Erika Ledesma <44066676+erikajledesma@users.noreply.github.com>

--- a/src/routes/package.json
+++ b/src/routes/package.json
@@ -5,7 +5,7 @@
   "main": "routes.ts",
   "scripts": {
     "test": "npx ts-node routes.ts",
-    "account": "npx ts-node github.ts"
+    "account": "npx ts-node github.ts google.ts"
   },
   "keywords": [],
   "author": "",
