--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.6",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.10.0"
+    "@types/node": "^20.10.0",
+    "supertest": "^7.0.0"
   }
 }
