--- a/src/notification/subscribe/package.json
+++ b/src/notification/subscribe/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "subscribe.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest subscribe.test.ts",
     "subscribe": "npx ts-node subscribe.ts",
     "subscribeRoutes": "npx ts-node subscribeRoutes.ts"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    }
   },
   "keywords": [],
   "author": "",
@@ -20,10 +25,16 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
     "@types/dotenv": "^8.2.0",
+    "@types/jest": "^29.5.12",
     "@types/mongoose": "^5.11.97",
+    "@types/mqtt": "^2.5.0",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.5.4"
   }
 }
