--- a/src/routes/package.json
+++ b/src/routes/package.json
@@ -18,6 +18,7 @@
     "cors-anywhere": "^0.4.4",
     "express": "^4.18.2",
     "lodash.get": "^4.4.2",
+    "next": "^14.2.9",
     "querystring": "^0.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
